# TimeTrackerApp

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
scripts/: release.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  oauth.rs  sheets.rs
src/lib/: tauri.js
src/lib/components/: AchievementToast.svelte  ActivityRings.svelte  BreakEditor.svelte  Confetti.svelte  Controls.svelte  DailyProgressRing.svelte  MoneyJar.svelte  NoteInput.svelte  RecoveryPrompt.svelte  ReminderToast.svelte  SessionSummary.svelte  Settings.svelte  StreakFlame.svelte  TimePicker.svelte  Timer.svelte  TitleBar.svelte  TutorialOverlay.svelte  WeeklyProgressBar.svelte  WelcomeModal.svelte
src/lib/stores/: gamification.js  nudges.js  reminderToast.js  session.js  timer.js  weeklyHours.js
src/lib/utils/: formatTime.js  microFeedback.js  parseSession.js  tones.js
