[package]
name = "timetracker"
version = "2.0.0"
description = "A gamified time tracking desktop app"
authors = ["Cryptic Glitch LLC"]
edition = "2021"

[lib]
name = "timetracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
oauth2 = "5"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
